Fixed a typo in a comment of the test file, and adding gas-reporter and coverage.

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
       "ethereum-waffle": "^3.4.4",
       "ethers": "^5.6.8",
       "hardhat": "^2.9.7",
+      "hardhat-gas-reporter": "^1.0.8",
       "@openzeppelin/contracts": "^4.6.0"
     }
 }
