Updated some of the environment variable names in prior commits, but had forgotten to update them in the Actions .yml file.

--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -23,10 +23,10 @@ jobs:
         run: |
           touch .env
           echo COINMARKETCAP_API_KEY='${{ secrets.COINMARKETCAP_API_KEY }}' >> .env
-          echo CONTRACT_NAME="AffeMitWaffe" >> .env
-          echo CONTRACT_SYMBOL="AMW" >> .env
+          echo NFT_NAME="AffeMitWaffe" >> .env
+          echo NFT_SYMBOL="AMW" >> .env
           echo INITIAL_BASE_TOKEN_URI="https://something.aws.s3.com/json/" >> .env
-          echo INITIAL_CONTRACT_URI="https://something.aws.s3.com/json/collection.json" >> .env
+          echo COLLECTION_URI="https://something.aws.s3.com/json/collection.json" >> .env
 
       - name: Run Hardhat Tests
         run: npx hardhat test
